# rust_os

./: Cargo.toml  README.md
.cargo/: config
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs  vga_buffer.rs
