[package]
name = "rust_os"
version = "0.1.0"
authors = ["myomi <m.myouchin@nakamura-joho.co.jp>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"

# static な WriterオブジェクトをOS起動時に生成するために lazy_static を使う。
[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

# error: language item required, but not found: `eh_personality` の解決に以下の記述を追加する。
# eh_personality は stack unwindingの実装に必要な language item。ここではpanic時にabortすることでコンパイルエラーを回避する 
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
