[package]
name = "rust_os"
version = "0.1.0"
authors = ["myomi <m.myouchin@nakamura-joho.co.jp>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-rust_os.json"
# QEMUのisa-debug-exit機能を利用し、テスト実行時はOSのシャットダウンを行うようにする
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"
x86_64 = "0.7.1"

# static な WriterオブジェクトをOS起動時に生成するために lazy_static を使う。
[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

# error: language item required, but not found: `eh_personality` の解決に以下の記述を追加する。
# eh_personality は stack unwindingの実装に必要な language item。ここではpanic時にabortすることでコンパイルエラーを回避する 
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
